# parkr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  __init__.py  layer.h  link.cpp  main.cpp  network.cpp  network.h  node.cpp  node.h  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
parker/: __init__.py  activation.py
parker/tests/: back_prop_test.py
parkr/: activation.py  network.py
parkr/tests/: back_prop_test.py
src/: activation.cpp  activation.h  layer.cpp  layer.h  link.cpp  link.h  main.cpp  network.cpp  network.h  node.cpp  node.h
src/parkr/: __init__.py  activation.py  network.py
src/parkr.egg-info/: PKG-INFO
src/parkr/parkr.egg-info/: PKG-INFO  SOURCES.txt
src/parkr/tests/: back_prop_test.py
