[metadata]
name = parkr-OlliePugh
version = 0.0.1
author = Ollie Pugh
author_email = oliver.pugh@mac.com
description = A  lightweight basic neural networks library in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlliePugh/parkr
project_urls =
    Bug Tracker = https://github.com/OlliePugh/parkr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = parkr
packages = find:
python_requires = >=3.6

[options.packages.find]
where = parkr]